--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <!-- Carousel section start here -->
 
-    <section class="container-fluid  ps-0 pe-0">
+    <section class="container-fluid  ps-0 pe-0 mb-5">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -136,9 +136,31 @@
     <!-- Carousel section ends here -->
 
 
+    <!-- confarence section start here -->
+
+    <section class="container-fluid py-5">
+        <div class="row mt-5 d-flex justify-content-around align-items-center ">
+            <div class="col-lg-5 img-fluid">
+                <img class="rounded w-100" src="images/confarence4.jpg"  alt="confarence">  
+            </div>
+
+            <div class="col-lg-6">
+                <h1> Community & Conference Centre </h1>
+                <p>Set in a peaceful location just outside Ipswich and easily accessible from the A12 and A14 routes, our superbly maintained venue offers a choice of function rooms to suit all budgets. The beautiful gardens and extensive outdoor sports facilities offer so much more than your usual community venue, providing something quite unique for the local community and surrounding areas to enjoy.</p>
+                <div>
+                    <a class="btn btn-primary" target="_blank" href="#" role="button">Explore our Album</a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+
+
     <!-- package section start here -->
 
-    <section class="container-fluid ps-4 pe-4 ">
+    <section class="container-fluid ps-4 pe-4  ">
         <h1 class="my-5 text-center text-uppercase">Our package</h1>
 
         <div class="package ">
@@ -153,21 +175,21 @@
                             <p class="card-text">For most businesses event
                                 like book fair, craft fair.</p>
 
-                          <p> <i class="far fa-check-circle pe-2"></i>limited space access </p>
-                          <p> <i class="far fa-check-circle pe-2"></i>Secuirty facility </p>
-                          <p> <i class="far fa-check-circle pe-2"></i>event support </p>
-                          <p> <i class="far fa-check-circle pe-2"></i>Decoration design </p>
-                          <p> <i class="far fa-check-circle pe-2"></i>Per day bill </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>limited space access </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>Secuirty facility </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>event support </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>Decoration design </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>Per day bill </p>
 
 
-                          <a class="btn btn-primary fw-bold" target="_blank" href="#">Choose plan</a>
+                            <a class="btn btn-primary fw-bold" target="_blank" href="#">Choose plan</a>
 
                         </div>
                     </div>
                 </div>
 
 
-               <div class="col">
+                <div class="col">
                     <div class="h-80">
                         <div class="card-body">
                             <h5 class="card-title h1">$500</h5>
@@ -175,14 +197,14 @@
                             <p class="card-text">For weddings with basic plan
                                 and limited item</p>
 
-                          <p> <i class="far fa-check-circle pe-2"></i>Full space access </p>
-                          <p> <i class="far fa-check-circle pe-2"></i>Food arrangement </p>
-                          <p> <i class="far fa-check-circle pe-2"></i>mangement support</p>
-                          <p> <i class="far fa-check-circle pe-2"></i>Decoration design </p>
-                          <p> <i class="far fa-check-circle pe-2"></i>Billed as shift </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>Full space access </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>Food arrangement </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>mangement support</p>
+                            <p> <i class="far fa-check-circle pe-2"></i>Decoration design </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>Billed as shift </p>
 
 
-                          <a class="btn btn-primary fw-bold" target="_blank" href="#">Choose plan</a>
+                            <a class="btn btn-primary fw-bold" target="_blank" href="#">Choose plan</a>
 
                         </div>
                     </div>
@@ -196,14 +218,14 @@
                             <h6 class="card-subtitle mb-2 text-muted h3">Wedding plus</h6>
                             <p class="card-text">For most weddings with premium plans</p>
 
-                          <p> <i class="far fa-check-circle pe-2"></i>Full space access </p>
-                          <p> <i class="far fa-check-circle pe-2"></i>Dedicated team </p>
-                          <p> <i class="far fa-check-circle pe-2"></i>Buffet food </p>
-                          <p> <i class="far fa-check-circle pe-2"></i>premium Decoration </p>
-                          <p> <i class="far fa-check-circle pe-2"></i>pay as plan </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>Full space access </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>Dedicated team </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>Buffet food </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>premium Decoration </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>pay as plan </p>
 
 
-                          <a class="btn btn-primary fw-bold" target="_blank" href="#">Choose plan</a>
+                            <a class="btn btn-primary fw-bold" target="_blank" href="#">Choose plan</a>
 
                         </div>
                     </div>
@@ -215,29 +237,89 @@
                         <div class="card-body">
                             <h5 class="card-title h1">$1200</h5>
                             <h6 class="card-subtitle mb-2 text-muted h3">Corporate event</h6>
-                            <p class="card-text">For most corporate business 
+                            <p class="card-text">For most corporate business
                                 events</p>
 
-                          <p> <i class="far fa-check-circle pe-2"></i>Full space access </p>
-                          <p> <i class="far fa-check-circle pe-2"></i>Dedicated team</p>
-                          <p> <i class="far fa-check-circle pe-2"></i>Buffet food </p>
-                          <p> <i class="far fa-check-circle pe-2"></i>premium Decoration </p>
-                          <p> <i class="far fa-check-circle pe-2"></i>pay as plan </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>Full space access </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>Dedicated team</p>
+                            <p> <i class="far fa-check-circle pe-2"></i>Buffet food </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>premium Decoration </p>
+                            <p> <i class="far fa-check-circle pe-2"></i>pay as plan </p>
 
 
-                          <a class="btn btn-primary fw-bold" target="_blank" href="#">Choose plan</a>
+                            <a class="btn btn-primary fw-bold" target="_blank" href="#">Choose plan</a>
 
                         </div>
                     </div>
                 </div>
 
-                
+
             </div>
 
 
         </div>
 
     </section>
+
+    
+
+
+    <!-- Frequently Asked Questions section start here -->
+
+   <section class="container-fluid ps-5 pe5 my-5">
+       <h1 class="text-center">Frequently Asked Questions</h1>
+
+       <div class=" row row-cols-lg-3 Questions-section py-5 d-flex justify-content-around align-items-center">
+           <div class="left col-lg-6">
+
+            <div class="accordion mb-4" id="accordionExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      Accordion Item #1
+                    </button>
+                  </h2>
+                  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Accordion Item #2
+                    </button>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      Accordion Item #3
+                    </button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+           </div>
+
+           <div class="col right col-lg-6 ">
+
+                <img class="rounded-3 w-100  img-fluid" src="./images/qustions.png" alt="qustions">
+
+           </div>
+       </div>
+   </section>
 
 
 
