--- a/index.html
+++ b/index.html
@@ -261,12 +261,29 @@
 
     </section>
 
-    
+
+    <!-- special section start here -->
+
+    <section class="row row-cols-lg-3 container-fluid d-flex justify-content-around">
+        <div class="left col-lg-5 bg-light p-5  align-items-center mb-4">
+            <h1 class="pt-5">Let's Get Planning</h1>
+            <p>We'd love to hear your event. Fill out our Event Enquiries form and let's bring your vision to reality. </p>
+
+            <a target="_blank"  href="#" class="btn bg-warning text-white fw-bold">BOOK NOW</a>
+
+        </div>
+
+        <div class="right col-lg-6">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d116834.00977757512!2d90.3492856167908!3d23.780777744853303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8b087026b81%3A0x8fa563bbdd5904c2!2sDhaka!5e0!3m2!1sen!2sbd!4v1643025488238!5m2!1sen!2sbd" width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+    </section>
+
+
 
 
     <!-- Frequently Asked Questions section start here -->
 
-   <section class="container-fluid ps-5 pe5 my-5">
+   <section class="container-fluid ps-5 pe5 my-5 ">
        <h1 class="text-center">Frequently Asked Questions</h1>
 
        <div class=" row row-cols-lg-3 Questions-section py-5 d-flex justify-content-around align-items-center">
