--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- navigation section start here -->
 
     <section>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light p-4">
             <div class="container-fluid">
                 <a class="navbar-brand ps-4 fw-bold" href="#">Dream Convention Center</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -36,16 +36,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0  pe-5">
                         <li class="nav-item me-4">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active fw-bold" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link " href="#">About US</a>
+                            <a class="nav-link fw-bold " href="#">About US</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link fw-bold" href="#">Contact</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link fw-bold" href="#">Subscribe</a>
                         </li>
 
                     </ul>
@@ -74,7 +74,8 @@
             <div class="carousel-inner ">
                 <div class="carousel-item active">
                     <img src="./images/banner.png" class="d-block w-100 " alt="image1 ">
-                    <div class="carousel-caption d-none d-md-block  bg-gradient d-flex align-items-cente">
+
+                    <div class="carousel-caption d-none d-md-block  bg-gradient d-flex pb-5 mb-5  ">
                         <h5 class="fs-1 ">The perfect venue for your next event</h5>
 
                         <p>The leader in event technology trends, this is an excellent resource for seasoned event
@@ -82,7 +83,7 @@
                             this blog specialises in innovation, and many event planners refer to it. They also focus a
                             lot on the event industry’s news.</p>
 
-                        <button class="btn btn-warning "> <a class="text-decoration-none text-white fw-bold"
+                        <button class="btn btn-warning mb-5 "> <a class="text-decoration-none text-white fw-bold"
                                 target="_blank" href="#">Book Now</a></button>
                     </div>
                 </div>
@@ -90,7 +91,7 @@
 
                 <div class="carousel-item ">
                     <img src="./images/confarence.png" class="d-block w-100 img-fluid " alt="image2">
-                    <div class="carousel-caption d-none d-md-block  bg-gradient p-5 d-flex align-items-center">
+                    <div class="carousel-caption d-none d-md-block  bg-gradient p-5 mb-5">
 
                         <h5 class="fs-1">The perfect venue for your next event</h5>
 
@@ -98,7 +99,7 @@
                             conventions, weddings, parties and more. This blog specialises in innovation and EventProfs
                             love it.</p>
 
-                        <button class="btn btn-warning "> <a class="text-decoration-none text-white fw-bold"
+                        <button class="btn btn-warning mb-5 "> <a class="text-decoration-none text-white fw-bold"
                                 target="_blank" href="#">Book Now</a></button>
 
                     </div>
@@ -107,7 +108,7 @@
 
                 <div class="carousel-item ">
                     <img src="./images/party2.png" class="d-block w-100 " alt="image3">
-                    <div class="carousel-caption d-none d-md-block  bg-gradient p-5 d-flex align-items-cente">
+                    <div class="carousel-caption d-none d-md-block  bg-gradient p-5 p-5 mb-5">
                         <h5 class="fs-1">The perfect venue for your next event</h5>
 
                         <p>The leader in event technology trends, this is an excellent resource for seasoned event
@@ -115,7 +116,7 @@
                             this blog specialises in innovation, and many event planners refer to it. They also focus a
                             lot on the event industry’s news.</p>
 
-                        <button class="btn btn-warning "> <a class="text-decoration-none text-white fw-bold"
+                        <button class="btn btn-warning mb-5"> <a class="text-decoration-none text-white fw-bold"
                                 target="_blank" href="#">Book Now</a></button>
                     </div>
                 </div>
@@ -141,17 +142,32 @@
     <section class="container-fluid py-5">
         <div class="row mt-5 d-flex justify-content-around align-items-center ">
             <div class="col-lg-5 img-fluid">
-                <img class="rounded w-100" src="images/confarence4.jpg"  alt="confarence">  
+                <img class="rounded w-100" src="images/confarence4.jpg" alt="confarence">
             </div>
 
             <div class="col-lg-6">
                 <h1> Community & Conference Centre </h1>
-                <p>Set in a peaceful location just outside Ipswich and easily accessible from the A12 and A14 routes, our superbly maintained venue offers a choice of function rooms to suit all budgets. The beautiful gardens and extensive outdoor sports facilities offer so much more than your usual community venue, providing something quite unique for the local community and surrounding areas to enjoy.</p>
+                <p>Set in a peaceful location just outside Ipswich and easily accessible from the A12 and A14 routes,
+                    our superbly maintained venue offers a choice of function rooms to suit all budgets. The beautiful
+                    gardens and extensive outdoor sports facilities offer so much more than your usual community venue,
+                    providing something quite unique for the local community and surrounding areas to enjoy.</p>
                 <div>
                     <a class="btn btn-primary" target="_blank" href="#" role="button">Explore our Album</a>
                 </div>
             </div>
 
+        </div>
+    </section>
+
+
+    <!-- tosts section start here -->
+    <section class="tost">
+
+        <div class="toast show align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="d-flex">
+                <div class="toast-body fw-bold"> <i class="fas fa-bell text-danger p-2"></i> Hello, Dear! Subscribe Our Dream Convention Center.</div>
+                <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
         </div>
     </section>
 
@@ -214,7 +230,13 @@
                 <div class="col">
                     <div class="card h-80  shadow-lg p-3 mb-5 bg-body rounded ">
                         <div class="card-body  ">
-                            <h5 class="card-title h1">$800</h5>
+
+                            <span
+                                class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                                HOT
+                                <span class="visually-hidden">unread messages</span>
+                            </span>
+                            <h5 class="card-title h1 ">$800</h5>
                             <h6 class="card-subtitle mb-2 text-muted h3">Wedding plus</h6>
                             <p class="card-text">For most weddings with premium plans</p>
 
@@ -264,17 +286,20 @@
 
     <!-- special section start here -->
 
-    <section class="row row-cols-lg-3 container-fluid d-flex justify-content-around">
-        <div class="left col-lg-5 bg-light p-5  align-items-center mb-4">
+    <section class="row row-cols-lg-2 container-fluid d-flex justify-content-around ">
+        <div class="left col-lg-5 bg-light p-5  align-items-center mb-4 rounded-3">
             <h1 class="pt-5">Let's Get Planning</h1>
-            <p>We'd love to hear your event. Fill out our Event Enquiries form and let's bring your vision to reality. </p>
+            <p>We'd love to hear your event. Fill out our Event Enquiries form and let's bring your vision to reality.
+            </p>
 
-            <a target="_blank"  href="#" class="btn bg-warning text-white fw-bold">BOOK NOW</a>
+            <a target="_blank" href="#" class="btn bg-warning text-white fw-bold">BOOK NOW</a>
 
         </div>
 
-        <div class="right col-lg-6">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d116834.00977757512!2d90.3492856167908!3d23.780777744853303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8b087026b81%3A0x8fa563bbdd5904c2!2sDhaka!5e0!3m2!1sen!2sbd!4v1643025488238!5m2!1sen!2sbd" width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="right col-lg-6 ">
+            <iframe class="w-100"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d116834.00977757512!2d90.3492856167908!3d23.780777744853303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8b087026b81%3A0x8fa563bbdd5904c2!2sDhaka!5e0!3m2!1sen!2sbd!4v1643025488238!5m2!1sen!2sbd"
+                width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </section>
 
@@ -283,62 +308,99 @@
 
     <!-- Frequently Asked Questions section start here -->
 
-   <section class="container-fluid ps-5 pe5 my-5 ">
-       <h1 class="text-center">Frequently Asked Questions</h1>
+    <section class="container-fluid ps-5 pe5 my-5 ">
+        <h1 class="text-center">Frequently Asked Questions</h1>
 
-       <div class=" row row-cols-lg-3 Questions-section py-5 d-flex justify-content-around align-items-center">
-           <div class="left col-lg-6">
+        <div class=" row row-cols-lg-3 Questions-section py-5 d-flex justify-content-around align-items-center">
+            <div class="left col-lg-6">
 
-            <div class="accordion mb-4" id="accordionExample">
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      Accordion Item #1
-                    </button>
-                  </h2>
-                  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <div class="accordion mb-4" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Accordion Item #1
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong>This is the first item's accordion body.</strong> It is shown by default, until
+                                the collapse plugin adds the appropriate classes that we use to style each element.
+                                These classes control the overall appearance, as well as the showing and hiding via CSS
+                                transitions. You can modify any of this with custom CSS or overriding our default
+                                variables. It's also worth noting that just about any HTML can go within the
+                                <code>.accordion-body</code>, though the transition does limit overflow.
+                            </div>
+                        </div>
                     </div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Accordion Item #2
-                    </button>
-                  </h2>
-                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Accordion Item #2
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong>This is the second item's accordion body.</strong> It is hidden by default,
+                                until the collapse plugin adds the appropriate classes that we use to style each
+                                element. These classes control the overall appearance, as well as the showing and hiding
+                                via CSS transitions. You can modify any of this with custom CSS or overriding our
+                                default variables. It's also worth noting that just about any HTML can go within the
+                                <code>.accordion-body</code>, though the transition does limit overflow.
+                            </div>
+                        </div>
                     </div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      Accordion Item #3
-                    </button>
-                  </h2>
-                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Accordion Item #3
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong>This is the third item's accordion body.</strong> It is hidden by default, until
+                                the collapse plugin adds the appropriate classes that we use to style each element.
+                                These classes control the overall appearance, as well as the showing and hiding via CSS
+                                transitions. You can modify any of this with custom CSS or overriding our default
+                                variables. It's also worth noting that just about any HTML can go within the
+                                <code>.accordion-body</code>, though the transition does limit overflow.
+                            </div>
+                        </div>
                     </div>
-                  </div>
                 </div>
-              </div>
 
-           </div>
+            </div>
 
-           <div class="col right col-lg-6 ">
+            <div class="col right col-lg-6 ">
 
                 <img class="rounded-3 w-100  img-fluid" src="./images/qustions.png" alt="qustions">
 
-           </div>
-       </div>
-   </section>
+            </div>
+        </div>
+    </section>
 
 
+
+    <!-- footer section start here -->
+
+    <footer class="d-flex justify-content-between align-items-center ps-5 pe-5 bg-dark col-12 flex-sm-column  flex-lg-row">
+        <p class="text-white ">© 2022 dream convention center. All rights reserved</p>
+
+        <div class=" right d-flex flex-column justify-content-center">
+            <h4 class="text-white mt-3">Get the App</h4>
+
+            <a target="_blank" href="#"><img src="./images/apple-removebg-preview.png" alt="apple"class="apple"></a>
+
+         <a target="_blank" href="#"><img src="./images/google_play-removebg-preview.png" alt="google " class=" google"></a>
+        </div>
+        
+
+    </footer>
 
 
 
