Project ends here!!

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- fav icon -->
+    <link rel="shortcut icon" href="./images/confarence4.jpg" type="image/x-icon">
+
 </head>
 
 <body>
@@ -39,13 +42,13 @@
                             <a class="nav-link active fw-bold" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link fw-bold " href="#">About US</a>
+                            <a class="nav-link fw-bold " href="#about">About US</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link fw-bold" href="#">Contact</a>
+                            <a class="nav-link fw-bold" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link fw-bold" href="#">Subscribe</a>
+                            <a class="nav-link fw-bold" href="#sub">Subscribe</a>
                         </li>
 
                     </ul>
@@ -84,7 +87,7 @@
                             lot on the event industry’s news.</p>
 
                         <button class="btn btn-warning mb-5 "> <a class="text-decoration-none text-white fw-bold"
-                                target="_blank" href="#">Book Now</a></button>
+                                target="_blank" href="https://www.bashundharaconvention.com/">Book Now</a></button>
                     </div>
                 </div>
 
@@ -100,7 +103,7 @@
                             love it.</p>
 
                         <button class="btn btn-warning mb-5 "> <a class="text-decoration-none text-white fw-bold"
-                                target="_blank" href="#">Book Now</a></button>
+                                target="_blank" href="https://www.bashundharaconvention.com/">Book Now</a></button>
 
                     </div>
                 </div>
@@ -117,7 +120,7 @@
                             and noise for guests who may feel overstimulated and need a more secure environment.</p>
 
                         <button class="btn btn-warning mb-5"> <a class="text-decoration-none text-white fw-bold"
-                                target="_blank" href="#">Book Now</a></button>
+                                target="_blank" href="https://www.bashundharaconvention.com/">Book Now</a></button>
                     </div>
                 </div>
             </div>
@@ -139,7 +142,7 @@
 
     <!-- confarence section start here -->
 
-    <section class="container-fluid py-5">
+    <section class="container-fluid py-5" id="about">
         <div class="row mt-5 d-flex justify-content-around align-items-center ">
             <div class="col-lg-5 img-fluid">
                 <img class="rounded w-100" src="images/confarence4.jpg" alt="confarence">
@@ -161,8 +164,11 @@
     </section>
 
 
+    <!-- confarence section ends here -->
+
+
     <!-- tosts section start here -->
-    <section class="tost">
+    <section class="tost" id="sub">
 
         <div class="toast show align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="d-flex">
@@ -173,7 +179,7 @@
         </div>
     </section>
 
-
+    <!-- tosts section ends here -->
 
 
     <!-- package section start here -->
@@ -200,7 +206,7 @@
                             <p> <i class="far fa-check-circle pe-2"></i>Per day bill </p>
 
 
-                            <a class="btn btn-warning text-white fw-bold" target="_blank" href="#">Choose plan</a>
+                            <a class="btn btn-warning text-white fw-bold" target="_blank" href="https://www.bashundharaconvention.com/">Choose plan</a>
 
                         </div>
                     </div>
@@ -222,7 +228,7 @@
                             <p> <i class="far fa-check-circle pe-2"></i>Billed as shift </p>
 
 
-                            <a class="btn btn-warning text-white fw-bold" target="_blank" href="#">Choose plan</a>
+                            <a class="btn btn-warning text-white fw-bold" target="_blank" href="https://www.bashundharaconvention.com/">Choose plan</a>
 
                         </div>
                     </div>
@@ -249,7 +255,7 @@
                             <p> <i class="far fa-check-circle pe-2"></i>pay as plan </p>
 
 
-                            <a class="btn btn-warning text-white fw-bold" target="_blank" href="#">Choose plan</a>
+                            <a class="btn btn-warning text-white fw-bold" target="_blank" href="https://www.bashundharaconvention.com/">Choose plan</a>
 
                         </div>
                     </div>
@@ -271,7 +277,7 @@
                             <p> <i class="far fa-check-circle pe-2"></i>pay as plan </p>
 
 
-                            <a class="btn btn-warning text-white fw-bold" target="_blank" href="#">Choose plan</a>
+                            <a class="btn btn-warning text-white fw-bold" target="_blank" href="https://www.bashundharaconvention.com/">Choose plan</a>
 
                         </div>
                     </div>
@@ -285,17 +291,22 @@
 
     </section>
 
+    <!-- package section ends here -->
+
+
+
+
 
     <!-- special section start here -->
 
-    <section class="row row-cols-lg-2 container-fluid d-flex justify-content-around ">
+    <section class="row row-cols-lg-2 container-fluid d-flex justify-content-around " id="contact">
 
         <div class="left col-lg-5 bg-light p-5  align-items-center mb-4 rounded-3">
             <h1 class="pt-5">Let's Get Planning</h1>
             <p>We'd love to hear your event. Fill out our Event Enquiries form and let's bring your vision to reality.
             </p>
 
-            <a target="_blank" href="#" class="btn bg-warning text-white fw-bold">BOOK NOW</a>
+            <a target="_blank" href="https://www.bashundharaconvention.com/" class="btn bg-warning text-white fw-bold">BOOK NOW</a>
 
         </div>
 
@@ -378,6 +389,7 @@
             </div>
         </div>
     </section>
+    <!-- Frequently Asked Questions section ends here -->
 
 
 
@@ -401,17 +413,7 @@
     </footer>
 
 
-
-
-
-
-
-
-
-
-
-
-
+    <!-- footer section ends here -->
 
 
 
